--- a/about.html
+++ b/about.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/about.css">
     <!-- Link for Remix Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css" rel="stylesheet">
+    <!-- Link for favion -->
+    <link
+      rel="shortcut icon"
+      href="assets/Images/Favicon/favicon-32x32.png"
+      type="image/x-icon"
+    />
 </head>
 <body>
     <div class="main">
