--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <!-- Link for favion -->
+    <link
+      rel="shortcut icon"
+      href="assets/Images/Favicon/favicon-32x32.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="main">
