--- a/project.html
+++ b/project.html
@@ -8,12 +8,25 @@
     <link rel="stylesheet" href="css/project.css">
     <!-- Link for Remix Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css" rel="stylesheet">
-    <!-- Link for favion -->
-    <link
-      rel="shortcut icon"
-      href="assets/Images/Favicon/favicon-32x32.png"
-      type="image/x-icon"
-    />
+     <!-- Link for favion -->
+     <link
+     rel="apple-touch-icon"
+     sizes="180x180"
+     href="assets/Images/Favicon/android-chrome-192x192.png"
+   />
+   <link
+     rel="icon"
+     type="image/png"
+     sizes="32x32"
+     href="assets/Images/Favicon/favicon-32x32.png"
+   />
+   <link
+     rel="icon"
+     type="image/png"
+     sizes="16x16"
+     href="assets/Images/Favicon/favicon-16x16.png"
+   />
+   <link rel="manifest" href="assets/Images/Favicon/site.webmanifest" />
 </head>
 <body>
 
