--- a/skills.html
+++ b/skills.html
@@ -12,11 +12,25 @@
       rel="stylesheet"
     />
     <!-- Link for favion -->
+    <!-- Link for favion -->
     <link
-      rel="shortcut icon"
-      href="assets/Images/Favicon/favicon-32x32.png"
-      type="image/x-icon"
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/Images/Favicon/android-chrome-192x192.png"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/Images/Favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/Images/Favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/Images/Favicon/site.webmanifest" />
   </head>
   <body>
     <div class="main">
