--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@
         </div>
                 
         <footer>
-            <p>Copyright ©2023 - Hamza Shahid</p>
+            <p>Copyright ©2023 - All rights reserved</p>
         </footer>
 
     </div>
