--- a/readcv.html
+++ b/readcv.html
@@ -360,7 +360,7 @@
         </div>
         
         <footer>
-            <p>Copyright ©2023 - Hamza Shahid</p>
+            <p>Copyright ©2023 - All rights reserved</p>
         </footer>
         
         </div>
