--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <link rel="manifest" href="assets/Images/Favicon/site.webmanifest" />
   </head>
   <body>
+    <div class="pre-loader"></div>
+
     <div class="main">
       <div class="sidenav">
         <div class="profile-wrapper">
