--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Devmax_</title>
+    <title>Home | DEVMAX®</title>
     <!-- Link for CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- Link for Remix Icons -->
@@ -32,8 +32,6 @@
     <link rel="manifest" href="assets/Images/Favicon/site.webmanifest" />
   </head>
   <body>
-    <div class="pre-loader"></div>
-
     <div class="main">
       <div class="sidenav">
         <div class="profile-wrapper">
@@ -283,7 +281,18 @@
         <p>Copyright ©2023 - All rights reserved</p>
       </footer>
     </div>
-
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
+      integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"
+      integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="js/script.js"></script>
   </body>
