--- a/readcv.html
+++ b/readcv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume - Devmax_</title>
+    <title>Resume | DEVMAX®</title>
     <!-- Link for CSS -->
     <link rel="stylesheet" href="css/readcv.css">
     <!-- Link for Remix Icons -->
@@ -177,7 +177,7 @@
                                     </div>
                                     <div class="right">
                                         <div class="right-name">Support Specialist</div>
-                                        <div class="desc">6+ months</div>
+                                        <div class="desc">8+ months</div>
                                     </div>
                                 </div>
                 
