--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Devmax_</title>
+    <title>About | DEVMAX®</title>
     <!-- Link for CSS -->
     <link rel="stylesheet" href="css/about.css">
     <!-- Link for Remix Icons -->
@@ -163,7 +163,7 @@
                                         </div>
                                         <div class="career-point-content-right">
                                             <h4>2+ months</h4>
-                                            <p>Oct 2023 - Present</p>
+                                            <p>Nov 2023 - Present</p>
                                         </div>
                                     </div>
                                 </div>
@@ -185,8 +185,8 @@
                                             <p>Faisalabad, Pakistan - Full time</p>
                                         </div>
                                         <div class="career-point-content-right">
-                                            <h4>6+ months</h4>
-                                            <p>May 2023 - Oct 2023</p>
+                                            <h4>8+ months</h4>
+                                            <p>Apr 2023 - Nov 2023</p>
                                         </div>
                                     </div>
                                 </div>
