--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact - Devmax_</title>
+    <title>Contact | DEVMAX®</title>
     <!-- Link for CSS -->
     <link rel="stylesheet" href="css/contact.css" />
     <!-- Link for Remix Icons -->
