--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Skills - Devmax_</title>
+    <title>Skills | DEVMAX®</title>
     <!-- Link for CSS -->
     <link rel="stylesheet" href="css/skills.css" />
     <!-- Link for Remix Icons -->
