--- a/skills.html
+++ b/skills.html
@@ -242,6 +242,16 @@
 
             <div class="skill-point">
               <div class="skill-point-img">
+                <img src="assets/Images/tailwind.png" alt="" />
+              </div>
+              <div class="skill-point-content">
+                <h4>Tailwind</h4>
+                <p>Framework</p>
+              </div>
+            </div>
+
+            <div class="skill-point">
+              <div class="skill-point-img">
                 <img src="assets/Images/javascript.png" alt="" />
               </div>
               <div class="skill-point-content">
