--- a/index.html
+++ b/index.html
@@ -195,12 +195,14 @@
             </div>
             <div class="project-1">
               <div class="project-img">
-                <img src="assets/Images/Crafters.jpg" alt="" />
+                <img src="assets/Images/weather app.jpg" alt="" />
               </div>
               <div class="project-content">
-                <h4>Code Crafters</h4>
-                <p>An animated website which will make you relax.</p>
-                <a href="https://github.com/Devmax-0/Crafters" target="_blank"
+                <h4>Weather App</h4>
+                <p>Weather Api intergration to get weather information.</p>
+                <a
+                  href="https://github.com/Devmax-0/Weather-App"
+                  target="_blank"
                   ><button class="project-btn">View</button></a
                 >
               </div>
