--- a/index.html
+++ b/index.html
@@ -169,14 +169,12 @@
             </div>
             <div class="project-1">
               <div class="project-img">
-                <img src="assets/Images/Netflix.jpg" alt="" />
+                <img src="assets/Images/ephemeral.jpg" alt="" />
               </div>
               <div class="project-content">
-                <h4>Netflix Clone</h4>
-                <p>A perfect clone which makes you try to find a difference.</p>
-                <a
-                  href="https://github.com/Devmax-0/Netflix-Clone"
-                  target="_blank"
+                <h4>Ephemeral Equilibrium</h4>
+                <p>A Landing page with mind blowing gooey animations.</p>
+                <a href="https://github.com/Devmax-0/Ephemeral" target="_blank"
                   ><button class="project-btn">View</button></a
                 >
               </div>
@@ -195,12 +193,14 @@
             </div>
             <div class="project-1">
               <div class="project-img">
-                <img src="assets/Images/Crafters.jpg" alt="" />
+                <img src="assets/Images/weather app.jpg" alt="" />
               </div>
               <div class="project-content">
-                <h4>Code Crafters</h4>
-                <p>An animated website which will make you relax.</p>
-                <a href="https://github.com/Devmax-0/Crafters" target="_blank"
+                <h4>Weather App</h4>
+                <p>Weather Api intergration to get weather information.</p>
+                <a
+                  href="https://github.com/Devmax-0/Weather-App"
+                  target="_blank"
                   ><button class="project-btn">View</button></a
                 >
               </div>
