Added New Project

--- a/project.html
+++ b/project.html
@@ -136,6 +136,21 @@
 
             <div class="project-main">
                 <h3>Projects</h3>
+
+                <div class="project-1">
+                    <div class="project-img">
+                      <img src="assets/Images/Gemini.jpg" alt="" />
+                    </div>
+                    <div class="project-content">
+                      <h4>Gemini Clone</h4>
+                      <p>A functional gemini clone using React.</p>
+                      <a
+                        href="https://github.com/Devmax-0/Gemini-Clone"
+                        target="_blank"
+                        ><button class="project-btn">View</button></a
+                      >
+                    </div>
+                </div>
             
                 <div class="project-1">
                     <div class="project-img">
