Added new Skill

--- a/index.html
+++ b/index.html
@@ -206,20 +206,6 @@
                 >
               </div>
             </div>
-            <div class="project-1">
-              <div class="project-img">
-                <img src="assets/Images/weather app.jpg" alt="" />
-              </div>
-              <div class="project-content">
-                <h4>Weather App</h4>
-                <p>Weather Api intergration to get weather information.</p>
-                <a
-                  href="https://github.com/Devmax-0/Weather-App"
-                  target="_blank"
-                  ><button class="project-btn">View</button></a
-                >
-              </div>
-            </div>
           </div>
 
           <div class="skill-main">
@@ -228,21 +214,11 @@
               <p class="f-para">Software and tools I use regularly.</p>
               <div class="skill-1">
                 <div class="skill-img">
-                  <img src="assets/Images/html.png" alt="" />
+                  <img src="assets/Images/React.png" alt="" />
                 </div>
                 <div class="skill-content">
-                  <h4>HTML</h4>
-                  <p>Structure, format, and display.</p>
-                </div>
-              </div>
-
-              <div class="skill-1">
-                <div class="skill-img">
-                  <img src="assets/Images/css.png" alt="" />
-                </div>
-                <div class="skill-content">
-                  <h4>CSS</h4>
-                  <p>Style, layout, enhance visuals.</p>
+                  <h4>React</h4>
+                  <p>Dynamic, Component-Based, UI Library.</p>
                 </div>
               </div>
 
@@ -253,6 +229,16 @@
                 <div class="skill-content">
                   <h4>JavaScript</h4>
                   <p>Dynamic, interactive, scripting.</p>
+                </div>
+              </div>
+
+              <div class="skill-1">
+                <div class="skill-img">
+                  <img src="assets/Images/tailwind.png" alt="" />
+                </div>
+                <div class="skill-content">
+                  <h4>Tailwind CSS</h4>
+                  <p>Style, layout, enhance visuals.</p>
                 </div>
               </div>
 
