--- a/skills.html
+++ b/skills.html
@@ -212,6 +212,16 @@
 
             <div class="skill-point">
               <div class="skill-point-img">
+                <img src="assets/Images/React.png" alt="" />
+              </div>
+              <div class="skill-point-content">
+                <h4>React</h4>
+                <p>Framework</p>
+              </div>
+            </div>
+
+            <div class="skill-point">
+              <div class="skill-point-img">
                 <img src="assets/Images/html.png" alt="" />
               </div>
               <div class="skill-point-content">
