Added Live Demo function

--- a/index.html
+++ b/index.html
@@ -162,11 +162,42 @@
               <div class="project-content">
                 <h4>Gemini Clone</h4>
                 <p>A functional gemini clone using React.</p>
-                <a
-                  href="https://github.com/Devmax-0/Gemini-Clone"
-                  target="_blank"
-                  ><button class="project-btn">View</button></a
-                >
+                <div class="project-btn-div">
+                  <a
+                    href="https://github.com/Devmax-0/Gemini-Clone"
+                    target="_blank"
+                    ><button class="project-btn">Code</button></a
+                  >
+                  <a
+                    style="margin-left: 5px"
+                    href="https://geminiclone-neon.vercel.app/"
+                    target="_blank"
+                    ><button class="project-btn">Live Demo</button></a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="project-1">
+              <div class="project-img">
+                <img src="assets/Images/Nike.jpg" alt="" />
+              </div>
+              <div class="project-content">
+                <h4>Nike</h4>
+                <p>A modern ecommerce website landing page.</p>
+                <div class="project-btn-div">
+                  <a
+                    href="https://github.com/Devmax-0/Nike-Landing-Page"
+                    target="_blank"
+                    ><button class="project-btn">Code</button></a
+                  >
+                  <a
+                    style="margin-left: 5px"
+                    href="https://nike-landing-page-devmax.vercel.app/"
+                    target="_blank"
+                    ><button class="project-btn">Live Demo</button></a
+                  >
+                </div>
               </div>
             </div>
 
@@ -177,33 +208,36 @@
               <div class="project-content">
                 <h4>Rejouice</h4>
                 <p>A modern website design with the touch of GSAP.</p>
-                <a href="https://github.com/Devmax-0/Rejouice" target="_blank"
-                  ><button class="project-btn">View</button></a
-                >
+                <div class="project-btn-div">
+                  <a href="https://github.com/Devmax-0/Rejouice" target="_blank"
+                    ><button class="project-btn">Code</button></a
+                  >
+                  <a href="https://rejouice-theta.vercel.app/" target="_blank"
+                    ><button class="project-btn">Live Demo</button></a
+                  >
+                </div>
               </div>
             </div>
+
             <div class="project-1">
               <div class="project-img">
-                <img src="assets/Images/ephemeral.jpg" alt="" />
+                <img src="assets/Images/Netflix.jpg" alt="" />
               </div>
               <div class="project-content">
-                <h4>Ephemeral Equilibrium</h4>
-                <p>A Landing page with mind blowing gooey animations.</p>
-                <a href="https://github.com/Devmax-0/Ephemeral" target="_blank"
-                  ><button class="project-btn">View</button></a
-                >
-              </div>
-            </div>
-            <div class="project-1">
-              <div class="project-img">
-                <img src="assets/Images/Themebau.jpg" alt="" />
-              </div>
-              <div class="project-content">
-                <h4>Themebau</h4>
-                <p>A modern website to look for different themes.</p>
-                <a href="https://github.com/Devmax-0/Themebau" target="_blank"
-                  ><button class="project-btn">View</button></a
-                >
+                <h4>Netflix Clone</h4>
+                <p>A perfect clone which makes you try to find a difference.</p>
+                <div class="project-btn-div">
+                  <a
+                    href="https://github.com/Devmax-0/Netflix-Clone"
+                    target="_blank"
+                    ><button class="project-btn">View</button></a
+                  >
+                  <a
+                    href="https://netflix-clone-tawny-six.vercel.app/"
+                    target="_blank"
+                    ><button class="project-btn">Live Demo</button></a
+                  >
+                </div>
               </div>
             </div>
           </div>
