--- a/skills.html
+++ b/skills.html
@@ -222,21 +222,11 @@
 
             <div class="skill-point">
               <div class="skill-point-img">
-                <img src="assets/Images/html.png" alt="" />
+                <img src="assets/Images/tailwind.png" alt="" />
               </div>
               <div class="skill-point-content">
-                <h4>HTML</h4>
-                <p>Markup Language</p>
-              </div>
-            </div>
-
-            <div class="skill-point">
-              <div class="skill-point-img">
-                <img src="assets/Images/css.png" alt="" />
-              </div>
-              <div class="skill-point-content">
-                <h4>CSS</h4>
-                <p>Style Sheet</p>
+                <h4>Tailwind CSS</h4>
+                <p>Framework</p>
               </div>
             </div>
 
@@ -252,21 +242,31 @@
 
             <div class="skill-point">
               <div class="skill-point-img">
-                <img src="assets/Images/tailwind.png" alt="" />
-              </div>
-              <div class="skill-point-content">
-                <h4>Tailwind</h4>
-                <p>Framework</p>
-              </div>
-            </div>
-
-            <div class="skill-point">
-              <div class="skill-point-img">
                 <img src="assets/Images/javascript.png" alt="" />
               </div>
               <div class="skill-point-content">
                 <h4>JavaScript</h4>
                 <p>Language</p>
+              </div>
+            </div>
+
+            <div class="skill-point">
+              <div class="skill-point-img">
+                <img src="assets/Images/html.png" alt="" />
+              </div>
+              <div class="skill-point-content">
+                <h4>HTML</h4>
+                <p>Markup Language</p>
+              </div>
+            </div>
+
+            <div class="skill-point">
+              <div class="skill-point-img">
+                <img src="assets/Images/css.png" alt="" />
+              </div>
+              <div class="skill-point-content">
+                <h4>CSS</h4>
+                <p>Style Sheet</p>
               </div>
             </div>
 
