--- a/index.html
+++ b/index.html
@@ -212,7 +212,10 @@
                   <a href="https://github.com/Devmax-0/Rejouice" target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
-                  <a href="https://rejouice-theta.vercel.app/" target="_blank"
+                  <a
+                    style="margin-left: 5px"
+                    href="https://rejouice-theta.vercel.app/"
+                    target="_blank"
                     ><button class="project-btn">Live Demo</button></a
                   >
                 </div>
@@ -233,6 +236,7 @@
                     ><button class="project-btn">View</button></a
                   >
                   <a
+                    style="margin-left: 5px"
                     href="https://netflix-clone-tawny-six.vercel.app/"
                     target="_blank"
                     ><button class="project-btn">Live Demo</button></a
