--- a/project.html
+++ b/project.html
@@ -195,7 +195,7 @@
                     <a href="https://github.com/Devmax-0/Rejouice" target="_blank"
                       ><button class="project-btn">Code</button></a
                     >
-                    <a href="https://rejouice-theta.vercel.app/" target="_blank"
+                    <a style="margin-left: 5px" href="https://rejouice-theta.vercel.app/" target="_blank"
                       ><button class="project-btn">Live Demo</button></a
                     >
                   </div>
@@ -213,7 +213,7 @@
                       <a href="https://github.com/Devmax-0/Ephemeral" target="_blank"
                         ><button class="project-btn">View</button></a
                       >
-                      <a href="https://ephemeral-henna.vercel.app/" target="_blank"
+                      <a style="margin-left: 5px" href="https://ephemeral-henna.vercel.app/" target="_blank"
                         ><button class="project-btn">Live Demo</button></a
                       >
                     </div>
@@ -235,6 +235,7 @@
                           ><button class="project-btn">View</button></a
                         >
                         <a
+                          style="margin-left: 5px"
                           href="https://netflix-clone-tawny-six.vercel.app/"
                           target="_blank"
                           ><button class="project-btn">Live Demo</button></a
@@ -254,7 +255,7 @@
                         <p>An animated website which will make you relax.</p>
                         <div class="project-btn-div">
                         <a href="https://github.com/Devmax-0/Crafters" target="_blank"><button class="project-btn">View</button></a>
-                        <a href="https://crafters-murex.vercel.app/" target="_blank"><button class="project-btn">Live Demo</button></a>
+                        <a style="margin-left: 5px" href="https://crafters-murex.vercel.app/" target="_blank"><button class="project-btn">Live Demo</button></a>
                     </div>
                     </div>
                 </div>
@@ -268,7 +269,7 @@
                         <p>You can get Exchange Rate to any currency in the world.</p>
                         <div class="project-btn-div">
                         <a href="https://github.com/Devmax-0/Currency-Calculator" target="_blank"><button class="project-btn">View</button></a>
-                        <a href="https://currency-calculator-blue.vercel.app/" target="_blank"><button class="project-btn">Live Demo</button></a>
+                        <a style="margin-left: 5px" href="https://currency-calculator-blue.vercel.app/" target="_blank"><button class="project-btn">Live Demo</button></a>
                     </div>
                     </div>
                 </div>
@@ -282,7 +283,7 @@
                         <p>Weather Api intergration to get weather information.</p>
                         <div class="project-btn-div">
                         <a href="https://github.com/Devmax-0/Weather-App" target="_blank"><button class="project-btn">View</button></a>
-                        <a href="https://weather-app-psi-red-46.vercel.app/" target="_blank"><button class="project-btn">Live Demo</button></a>
+                        <a style="margin-left: 5px" href="https://weather-app-psi-red-46.vercel.app/" target="_blank"><button class="project-btn">Live Demo</button></a>
                     </div>
                     </div>
                 </div>
