--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   <a
                     href="https://github.com/Devmax-0/Brainwave"
                     target="_blank"
-                    ><button class="project-btn">View</button></a
+                    ><button class="project-btn">Code</button></a
                   >
                   <a
                     style="margin-left: 5px"
