--- a/project.html
+++ b/project.html
@@ -183,7 +183,7 @@
                   <a
                     href="https://github.com/Devmax-0/Brainwave"
                     target="_blank"
-                    ><button class="project-btn">View</button></a
+                    ><button class="project-btn">Code</button></a
                   >
                   <a
                     style="margin-left: 5px"
@@ -250,7 +250,7 @@
                   <a
                     href="https://github.com/Devmax-0/Ephemeral"
                     target="_blank"
-                    ><button class="project-btn">View</button></a
+                    ><button class="project-btn">Code</button></a
                   >
                   <a
                     style="margin-left: 5px"
@@ -273,7 +273,7 @@
                   <a
                     href="https://github.com/Devmax-0/Netflix-Clone"
                     target="_blank"
-                    ><button class="project-btn">View</button></a
+                    ><button class="project-btn">Code</button></a
                   >
                   <a
                     style="margin-left: 5px"
@@ -294,7 +294,7 @@
                 <p>An animated website which will make you relax.</p>
                 <div class="project-btn-div">
                   <a href="https://github.com/Devmax-0/Crafters" target="_blank"
-                    ><button class="project-btn">View</button></a
+                    ><button class="project-btn">Code</button></a
                   >
                   <a
                     style="margin-left: 5px"
@@ -316,7 +316,7 @@
                   <a
                     href="https://github.com/Devmax-0/Currency-Calculator"
                     target="_blank"
-                    ><button class="project-btn">View</button></a
+                    ><button class="project-btn">Code</button></a
                   >
                   <a
                     style="margin-left: 5px"
@@ -338,7 +338,7 @@
                   <a
                     href="https://github.com/Devmax-0/Weather-App"
                     target="_blank"
-                    ><button class="project-btn">View</button></a
+                    ><button class="project-btn">Code</button></a
                   >
                   <a
                     style="margin-left: 5px"
