Added Skill, Added Project

--- a/index.html
+++ b/index.html
@@ -166,6 +166,29 @@
 
             <div class="project-1">
               <div class="project-img">
+                <img src="assets/Images/budget.jpg" alt="" />
+              </div>
+              <div class="project-content">
+                <h4>Budget Tracker</h4>
+                <p>A Fullstack Budget Tracker web app using NEXT.js</p>
+                <div class="project-btn-div">
+                  <a
+                    href="https://github.com/Devmax-0/FullStack-Budget-Tracker"
+                    target="_blank"
+                    ><button class="project-btn">Code</button></a
+                  >
+                  <a
+                    style="margin-left: 5px"
+                    href="https://full-stack-budget-tracker.vercel.app"
+                    target="_blank"
+                    ><button class="project-btn">Live Demo</button></a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="project-1">
+              <div class="project-img">
                 <img src="assets/Images/Gemini.jpg" alt="" />
               </div>
               <div class="project-content">
@@ -226,27 +249,6 @@
                   <a
                     style="margin-left: 5px"
                     href="https://nike-landing-page-devmax.vercel.app/"
-                    target="_blank"
-                    ><button class="project-btn">Live Demo</button></a
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="project-1">
-              <div class="project-img">
-                <img src="assets/Images/rejouice.jpg" alt="" />
-              </div>
-              <div class="project-content">
-                <h4>Rejouice</h4>
-                <p>A modern website design with the touch of GSAP.</p>
-                <div class="project-btn-div">
-                  <a href="https://github.com/Devmax-0/Rejouice" target="_blank"
-                    ><button class="project-btn">Code</button></a
-                  >
-                  <a
-                    style="margin-left: 5px"
-                    href="https://rejouice-theta.vercel.app/"
                     target="_blank"
                     ><button class="project-btn">Live Demo</button></a
                   >
