--- a/skills.html
+++ b/skills.html
@@ -190,10 +190,10 @@
 
             <div class="skill-point">
               <div class="skill-point-img">
-                <img src="assets/Images/discord.png" alt="" />
+                <img src="assets/Images/skype.png" alt="" />
               </div>
               <div class="skill-point-content">
-                <h4>Discord</h4>
+                <h4>Skype</h4>
                 <p>Communiation</p>
               </div>
             </div>
@@ -226,11 +226,21 @@
 
             <div class="skill-point">
               <div class="skill-point-img">
+                <img src="assets/Images/next.png" alt="" />
+              </div>
+              <div class="skill-point-content">
+                <h4>NEXT.JS</h4>
+                <p>Framework</p>
+              </div>
+            </div>
+
+            <div class="skill-point">
+              <div class="skill-point-img">
                 <img src="assets/Images/React.png" alt="" />
               </div>
               <div class="skill-point-content">
                 <h4>React</h4>
-                <p>Framework</p>
+                <p>Library</p>
               </div>
             </div>
 
@@ -241,6 +251,16 @@
               <div class="skill-point-content">
                 <h4>Tailwind CSS</h4>
                 <p>Framework</p>
+              </div>
+            </div>
+
+            <div class="skill-point">
+              <div class="skill-point-img">
+                <img src="assets/Images/gsap.png" alt="" />
+              </div>
+              <div class="skill-point-content">
+                <h4>GSAP</h4>
+                <p>Library</p>
               </div>
             </div>
 
@@ -281,25 +301,6 @@
               <div class="skill-point-content">
                 <h4>CSS</h4>
                 <p>Style Sheet</p>
-              </div>
-            </div>
-
-            <div class="skill-point">
-              <div class="skill-point-img">
-                <img src="assets/Images/gsap.png" alt="" />
-              </div>
-              <div class="skill-point-content">
-                <h4>GSAP</h4>
-                <p>Library</p>
-              </div>
-            </div>
-            <div class="skill-point">
-              <div class="skill-point-img">
-                <img src="assets/Images/php.png" alt="" />
-              </div>
-              <div class="skill-point-content">
-                <h4>PHP</h4>
-                <p>Language</p>
               </div>
             </div>
           </div>
