--- a/project.html
+++ b/project.html
@@ -197,6 +197,29 @@
 
             <div class="project-1">
               <div class="project-img">
+                <img src="assets/Images/budget.jpg" alt="" />
+              </div>
+              <div class="project-content">
+                <h4>Budget Tracker</h4>
+                <p>A Fullstack Budget Tracker web app using NEXT.js</p>
+                <div class="project-btn-div">
+                  <a
+                    href="https://github.com/Devmax-0/FullStack-Budget-Tracker"
+                    target="_blank"
+                    ><button class="project-btn">Code</button></a
+                  >
+                  <a
+                    style="margin-left: 5px"
+                    href="https://full-stack-budget-tracker.vercel.app"
+                    target="_blank"
+                    ><button class="project-btn">Live Demo</button></a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="project-1">
+              <div class="project-img">
                 <img src="assets/Images/Nike.jpg" alt="" />
               </div>
               <div class="project-content">
@@ -232,29 +255,6 @@
                   <a
                     style="margin-left: 5px"
                     href="https://rejouice-theta.vercel.app/"
-                    target="_blank"
-                    ><button class="project-btn">Live Demo</button></a
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="project-1">
-              <div class="project-img">
-                <img src="assets/Images/ephemeral.jpg" alt="" />
-              </div>
-              <div class="project-content">
-                <h4>Ephemeral Equilibrium</h4>
-                <p>A Landing page with mind blowing gooey animations.</p>
-                <div class="project-btn-div">
-                  <a
-                    href="https://github.com/Devmax-0/Ephemeral"
-                    target="_blank"
-                    ><button class="project-btn">Code</button></a
-                  >
-                  <a
-                    style="margin-left: 5px"
-                    href="https://ephemeral-henna.vercel.app/"
                     target="_blank"
                     ><button class="project-btn">Live Demo</button></a
                   >
