--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCKCDCXFCsHCklcvlNXLxMJNgPTkstvbmPcrHBhwqQJvgmKldmjwWrFTFSzbHqVWmWMRHBKg"
               target="_blank"
               ><button class="email-btn">
-                <i class="ri-question-answer-line"></i>E-mail
+                <i class="bx bx-envelope"></i>E-mail
               </button></a
             >
           </div>
@@ -318,7 +318,7 @@
                   href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCKCDCXFCsHCklcvlNXLxMJNgPTkstvbmPcrHBhwqQJvgmKldmjwWrFTFSzbHqVWmWMRHBKg"
                   target="_blank"
                   ><button class="email-btn">
-                    <i class="ri-question-answer-line"></i>E-mail
+                    <i class="bx bx-envelope"></i>E-mail
                   </button></a
                 >
               </div>
