--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <h3>Linkedin</h3>
             </div>
           </a>
-          <a href="https://github.com/Devmax-0" target="_blank">
+          <a href="https://github.com/hamzaa-001" target="_blank">
             <div class="link">
               <i class="bx bxl-github"></i>
               <h3>Github</h3>
@@ -173,7 +173,7 @@
                 <p>A Fullstack Budget Tracker web app using NEXT.js</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/FullStack-Budget-Tracker"
+                    href="https://github.com/hamzaa-001/FullStack-Budget-Tracker"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
@@ -196,7 +196,7 @@
                 <p>A functional gemini clone using React.</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/Gemini-Clone"
+                    href="https://github.com/hamzaa-001/Gemini-Clone"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
@@ -219,7 +219,7 @@
                 <p>A launching website for a powerful AI tool using React.</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/Brainwave"
+                    href="https://github.com/hamzaa-001/Brainwave"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
@@ -242,7 +242,7 @@
                 <p>A modern ecommerce website landing page.</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/Nike-Landing-Page"
+                    href="https://github.com/hamzaa-001/Nike-Landing-Page"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
