--- a/project.html
+++ b/project.html
@@ -97,7 +97,7 @@
               <h3>Linkedin</h3>
             </div>
           </a>
-          <a href="https://github.com/Devmax-0" target="_blank">
+          <a href="https://github.com/hamzaa-001" target="_blank">
             <div class="link">
               <i class="bx bxl-github"></i>
               <h3>Github</h3>
@@ -158,7 +158,7 @@
                 <p>A functional gemini clone using React.</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/Gemini-Clone"
+                    href="https://github.com/hamzaa-001/Gemini-Clone"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
@@ -181,7 +181,7 @@
                 <p>A launching website for a powerful AI tool using React.</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/Brainwave"
+                    href="https://github.com/hamzaa-001/Brainwave"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
@@ -204,7 +204,7 @@
                 <p>A Fullstack Budget Tracker web app using NEXT.js</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/FullStack-Budget-Tracker"
+                    href="https://github.com/hamzaa-001/FullStack-Budget-Tracker"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
@@ -227,7 +227,7 @@
                 <p>A modern ecommerce website landing page.</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/Nike-Landing-Page"
+                    href="https://github.com/hamzaa-001/Nike-Landing-Page"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
@@ -249,7 +249,9 @@
                 <h4>Rejouice</h4>
                 <p>A modern website design with the touch of GSAP.</p>
                 <div class="project-btn-div">
-                  <a href="https://github.com/Devmax-0/Rejouice" target="_blank"
+                  <a
+                    href="https://github.com/hamzaa-001/Rejouice"
+                    target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
                   <a
@@ -271,7 +273,7 @@
                 <p>A perfect clone which makes you try to find a difference.</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/Netflix-Clone"
+                    href="https://github.com/hamzaa-001/Netflix-Clone"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
@@ -293,7 +295,9 @@
                 <h4>Code Crafters</h4>
                 <p>An animated website which will make you relax.</p>
                 <div class="project-btn-div">
-                  <a href="https://github.com/Devmax-0/Crafters" target="_blank"
+                  <a
+                    href="https://github.com/hamzaa-001/Crafters"
+                    target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
                   <a
@@ -314,7 +318,7 @@
                 <p>You can get Exchange Rate to any currency in the world.</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/Currency-Calculator"
+                    href="https://github.com/hamzaa-001/Currency-Calculator"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
@@ -336,7 +340,7 @@
                 <p>Weather Api intergration to get weather information.</p>
                 <div class="project-btn-div">
                   <a
-                    href="https://github.com/Devmax-0/Weather-App"
+                    href="https://github.com/hamzaa-001/Weather-App"
                     target="_blank"
                     ><button class="project-btn">Code</button></a
                   >
