--- a/skills.html
+++ b/skills.html
@@ -99,7 +99,7 @@
               <h3>Linkedin</h3>
             </div>
           </a>
-          <a href="https://github.com/Devmax-0" target="_blank">
+          <a href="https://github.com/hamzaa-001" target="_blank">
             <div class="link">
               <i class="bx bxl-github"></i>
               <h3>Github</h3>
