Small UI changes

--- a/about.html
+++ b/about.html
@@ -188,6 +188,39 @@
                 <div class="career-path-wrapper">
                   <div class="career-point career-active">
                     <div class="career-img">
+                      <img src="assets/Images/devontix.jpg" alt="" />
+                    </div>
+
+                    <div class="career-point-content">
+                      <div class="career-point-content-left">
+                        <h4>Web Developer</h4>
+                        <p>Faisalabad, Pakistan - Full Time</p>
+                      </div>
+                      <div class="career-point-content-right">
+                        <h4>2+ months</h4>
+                        <p>April 2023 - Present</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="career-path-stroke">
+                    <svg
+                      width="2"
+                      height="27"
+                      viewBox="0 0 2 27"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1 0L0.999999 27"
+                        stroke="#0EC86E"
+                        stroke-width="2"
+                        stroke-dasharray="4 4"
+                      ></path>
+                    </svg>
+                  </div>
+
+                  <div class="career-point">
+                    <div class="career-img">
                       <img src="assets/Images/tecnsol_new.jfif" alt="" />
                     </div>
 
@@ -198,7 +231,7 @@
                       </div>
                       <div class="career-point-content-right">
                         <h4>5+ months</h4>
-                        <p>Nov 2023 - Present</p>
+                        <p>Nov 2023 - March 2024</p>
                       </div>
                     </div>
                   </div>
