Added Kicks Project

--- a/index.html
+++ b/index.html
@@ -189,6 +189,27 @@
 
             <div class="project-1">
               <div class="project-img">
+                <img src="assets/Images/kicks.jpg" alt="" />
+              </div>
+              <div class="project-content">
+                <h4>Kicks</h4>
+                <p>A modern shoe brand website.</p>
+                <div class="project-btn-div">
+                  <a href="https://github.com/hamzaa-001/Kicks" target="_blank"
+                    ><button class="project-btn">Code</button></a
+                  >
+                  <a
+                    style="margin-left: 5px"
+                    href="https://kicks-blue.vercel.app/"
+                    target="_blank"
+                    ><button class="project-btn">Live Demo</button></a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="project-1">
+              <div class="project-img">
                 <img src="assets/Images/Gemini.jpg" alt="" />
               </div>
               <div class="project-content">
@@ -226,29 +247,6 @@
                   <a
                     style="margin-left: 5px"
                     href="https://brainwave-six-kappa.vercel.app/"
-                    target="_blank"
-                    ><button class="project-btn">Live Demo</button></a
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="project-1">
-              <div class="project-img">
-                <img src="assets/Images/Nike.jpg" alt="" />
-              </div>
-              <div class="project-content">
-                <h4>Nike</h4>
-                <p>A modern ecommerce website landing page.</p>
-                <div class="project-btn-div">
-                  <a
-                    href="https://github.com/hamzaa-001/Nike-Landing-Page"
-                    target="_blank"
-                    ><button class="project-btn">Code</button></a
-                  >
-                  <a
-                    style="margin-left: 5px"
-                    href="https://nike-landing-page-devmax.vercel.app/"
                     target="_blank"
                     ><button class="project-btn">Live Demo</button></a
                   >
